--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/twig-bundle": "5.1.*",
         "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.1.*",
+        "twig/twig": "^3.1"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.23"
